updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a School Psychologist seeking to become a web developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in the Dominican Republic, but grew up in NYC and Central Florida</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Going to the movies, reading novels, and traveling</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A job that I can be excited about every morning</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Winter Garden, FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Seems like an interesting field and appears to be a good fit in terms of my preferred work style</p>
     </section>
 
     <footer id="footer">
